--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     <form><input type="text" placeholder="Enter a value"><button type="button">Create</button></form>
 
     <h2>Progress Button</h2>
+    <button class="progress-animation" onClick="toggleClass(this, 'in-progress')">Progress Button</button>
     <button class="progress-animation in-progress" onClick="toggleClass(this, 'done')">Progress Button</button>
 
     <h2>Pulsate animation</h2>
