--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
     </p>
 
     <h2>Buttons in a Flexbox</h2>
+
     <div class="flex">
       <button>Primary</button>
       <button class="secondary">Secondary</button>
       <button disabled>Disabled</button>
     </div>
 
-    <button class="secondary autosize">Autosize</button>
+    <div class="flex">
+      <button class="secondary autosize">Autosize</button>
+      <a class="button" href="https://github.com/tomsoderlund/arcade-css" target="_blank" rel="noopener noreferrer">Link Button</a>
+    </div>
 
     <h2>Links</h2>
     <p>Did you know that <a href="https://github.com/tomsoderlund/arcade-css" target="_blank" rel="noopener noreferrer">this is a link</a>?</p>
